--- a/src/styles/Page/LoginPageStyles.module.css
+++ b/src/styles/Page/LoginPageStyles.module.css
@@ -1,22 +1,50 @@
-.registerContainer {
-    margin-top: 10%;
+.root {
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    justify-content: center;
+    flex-direction: row;
+    padding: 30px;
 }
-.loginContainer {
-    margin-top: 20%;
-    background-color: white;
-    align-items: center;
-    justify-content: center;
-}
-.loginButton {
-    text-align: center;
-    margin-top: 10%;
-    margin-bottom: 5%;
-}
-.text {
-    color: black;
+.itemsContainer {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #f6fafb;
+    padding: 30px;
+    margin: 30px;
+    border-radius: 15px;
+    width: 100%;
+    height: 300px;
 }
 .container {
     height: 100%;
+}
+.loginHeader {
+    text-align: center;
+    font-weight: bold;
+}
+.loginContainer {
+    margin-top: 20px;
+    align-items: center;
+    justify-content: center;
+}
+.loginControl {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.loginLabel {
+    width: 70%;
+}
+.loginInput {
+    width: 70%;
+}
+.loginButton {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    width: 20%;
 }
