Fix css pixel size

--- a/src/styles/Page/CategoriesPageStyles.module.css
+++ b/src/styles/Page/CategoriesPageStyles.module.css
@@ -1,5 +1,5 @@
 .resourcesContainer {
-    margin-top: 20;
-    margin-bottom: 20;
+    margin-top: 20px;
+    margin-bottom: 20px;
     justify-content: center;
 }
