--- a/src/styles/Page/CategoryDetailsPageStyles.module.css
+++ b/src/styles/Page/CategoryDetailsPageStyles.module.css
@@ -1,8 +1,8 @@
 .categoriesContainer {
-    padding-bottom: 80;
+    padding-bottom: 80px;
 }
 .columnWrapperStyle {
-  margin-top: 20;
-  margin-bottom: 20;
+  margin-top: 20px;
+  margin-bottom: 20px;
   justify-content: center;
 }
