--- a/src/styles/Page/ResourcesPageStyles.module.css
+++ b/src/styles/Page/ResourcesPageStyles.module.css
@@ -1,6 +1,6 @@
 .resourcesContainer {
-    margin-top: 20;
-    margin-bottom: 20;
+    margin-top: 20px;
+    margin-bottom: 20px;
     justify-content: center;
-    padding-bottom: 80;
+    padding-bottom: 80px;
 }
