--- a/src/styles/Page/EditResourcePageStyles.module.css
+++ b/src/styles/Page/EditResourcePageStyles.module.css
@@ -2,53 +2,53 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    padding-left: 10;
-    padding-right: 10;
-    margin-top: 5;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 5px;
 }
 .addNameResource {
     color: black;
     background-color: whitesmoke;
     text-align: center;
-    height: 40;
+    height: 40px;
     width: 90%;
-    border-radius : 10;
-    padding-top: 10;
-    padding-bottom: 10;
+    border-radius : 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .sendButton {
-    width: 140;
-    height: 45;
+    width: 140px;
+    height: 45px;
     justify-content: center;
     background-color: grey;
-    margin-top: 20;
-    border-radius: 15;
+    margin-top: 20px;
+    border-radius: 15px;
     transition: 0.2;
 }
 .categorieList {
-    margin-right: 10;
+    margin-right: 10px;
     width: 70%;
     display: flex;
     flex-direction: row;
 }
 .categorieContainer {
-    margin-top: 20;
+    margin-top: 20px;
     align-items: center;
     width: 90%;
     display: flex;
     flex-direction: row;
 }
 .addCategorieContainer {
-    margin-right: 5;
+    margin-right: 5px;
 }
 .addCategorieText {
     background-color: grey;
     color: black;
-    padding-left: 20;
-    padding-right: 20;
-    padding-bottom: 4;
-    padding-top: 2;    
-    border-radius: 15;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 4px;
+    padding-top: 2px;    
+    border-radius: 15px;
     text-align: center;
 }
 .switchContainer {
@@ -57,5 +57,5 @@
     overflow: scroll;
     align-items: center;
     justify-content: space-between;
-    margin-top: 20;
+    margin-top: 20px;
 }
