--- a/src/styles/Page/ShareResourcePageStyles.module.css
+++ b/src/styles/Page/ShareResourcePageStyles.module.css
@@ -1,29 +1,29 @@
 .resourcesContainer {
-    margin-top: 20;
-    margin-bottom: 20;
+    margin-top: 20px;
+    margin-bottom: 20px;
     justify-content: center;
-    padding-bottom: 130;
+    padding-bottom: 130px;
 }
 .textSaves {
     color: black;
     position: relative;
     text-align: center;
-    font-size: 16;
-    top: 15;
-    margin-bottom: 15;
+    font-size: 16px;
+    top: 15px;
+    margin-bottom: 15px;
     text-decoration: underline;
 }
 .addResourceBtn {
     text-align: center;
     color: white;
-    margin-top: 5;
-    height: 50;
-    width: 150;
+    margin-top: 5px;
+    height: 50px;
+    width: 150px;
 }
 .buttonsContainer {
     position : absolute;
     justify-content: center;
     align-items: center;
-    bottom: 100;
+    bottom: 100px;
     width: 100%;
 }
