Add CategoryCard component to CategoriesPage

--- a/src/styles/Page/CategoriesPageStyles.module.css
+++ b/src/styles/Page/CategoriesPageStyles.module.css
@@ -1,5 +1,8 @@
 .resourcesContainer {
     margin-top: 20px;
     margin-bottom: 20px;
-    justify-content: center;
+    justify-content: space-around;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
