--- a/src/styles/CommonStyles.module.css
+++ b/src/styles/CommonStyles.module.css
@@ -11,6 +11,7 @@
     top : 135px;
     bottom: 0px;
     border-radius: 30px;
+    overflow: scroll;
 }
 .btnHomeBackground {
     position : absolute;
