--- a/src/styles/Page/LoginPageStyles.module.css
+++ b/src/styles/Page/LoginPageStyles.module.css
@@ -14,6 +14,7 @@
     border-radius: 15px;
     width: 100%;
     height: 300px;
+    box-shadow: 0px 10px 50px -10px #808080;
 }
 .container {
     height: 100%;
@@ -36,15 +37,37 @@
 }
 .loginLabel {
     width: 70%;
+    color: #808080;
 }
 .loginInput {
     width: 70%;
+    box-sizing: border-box;
+    box-shadow: 0px 10px 50px -10px #808080;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #EEEEEE;
+    transition: 0.2s;
+}
+.loginInput:hover {
+    border-bottom: 2px solid #03989E;
 }
 .loginButton {
     text-align: center;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 30px;
     margin-bottom: 5px;
+    padding: 5px;
     width: 20%;
+    transition: 0.2s;
+    cursor: pointer;
+    outline: none;
+    border-radius: 5px;
+    border: none;
+    background-color: #03989E;
+    color: #f6fafb;
+}
+.loginButton:hover {
+    transform: translateY(-5px);
+    box-shadow : 0px 10px 50px -10px #808080;
 }
