--- a/src/styles/Components/Card/CategoryCardStyles.module.css
+++ b/src/styles/Components/Card/CategoryCardStyles.module.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    box-shadow: 0px 10px 50px -10px #CCCCCC;
 }
 .cardTitle {
     color: black;
