--- a/src/styles/Page/LoginPageStyles.module.css
+++ b/src/styles/Page/LoginPageStyles.module.css
@@ -13,8 +13,8 @@
     margin: 30px;
     border-radius: 15px;
     width: 100%;
-    height: 300px;
-    box-shadow: 0px 10px 50px -10px #808080;
+    height: 350px;
+    box-shadow: 0px 10px 50px -10px #CCCCCC;
 }
 .container {
     height: 100%;
@@ -42,11 +42,12 @@
 .loginInput {
     width: 70%;
     box-sizing: border-box;
-    box-shadow: 0px 10px 50px -10px #808080;
+    box-shadow: 0px 10px 50px -10px #CCCCCC;
     border: none;
     outline: none;
     border-bottom: 2px solid #EEEEEE;
     transition: 0.2s;
+    height: 25px;
 }
 .loginInput:hover {
     border-bottom: 2px solid #03989E;
@@ -69,5 +70,5 @@
 }
 .loginButton:hover {
     transform: translateY(-5px);
-    box-shadow : 0px 10px 50px -10px #808080;
+    box-shadow : 0px 10px 50px -10px #CCCCCC;
 }
