--- a/src/styles/Components/Card/CategoryCardStyles.module.css
+++ b/src/styles/Components/Card/CategoryCardStyles.module.css
@@ -8,9 +8,14 @@
     width: 300px;
     height: 300px;
     display: flex;
+    cursor: pointer;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0px 10px 50px -10px #CCCCCC;
+}
+.cardBackground:hover {
+    background-color: #cfd4d4;
+    transition: 0.2s;
 }
 .cardTitle {
     color: black;
