--- a/src/styles/Page/LoginPageStyles.module.css
+++ b/src/styles/Page/LoginPageStyles.module.css
@@ -1,11 +1,16 @@
-.root {
+.spinner {
+    justify-content: center;
+    align-items: center;
+}
+.formContainer {
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: row;
-    padding: 30px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
-.itemsContainer {
+.form {
     margin-top: 20px;
     margin-bottom: 20px;
     background-color: #f6fafb;
@@ -13,46 +18,46 @@
     margin: 30px;
     border-radius: 15px;
     width: 100%;
-    height: 350px;
+    height: 500px;
     box-shadow: 0px 10px 50px -10px #CCCCCC;
 }
-.container {
-    height: 100%;
-}
-.loginHeader {
+.header {
     text-align: center;
     font-weight: bold;
 }
-.loginContainer {
+.container {
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.loginControl {
+.control {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 80%;
+    margin: 10px;
 }
-.loginLabel {
-    width: 70%;
+.label {
+    width: 100%;
     color: #808080;
 }
-.loginInput {
-    width: 70%;
+.input {
+    width: 100%;
     box-sizing: border-box;
     box-shadow: 0px 10px 50px -10px #CCCCCC;
     border: none;
     outline: none;
     border-bottom: 2px solid #EEEEEE;
     transition: 0.2s;
-    height: 25px;
+    height: 30px;
 }
-.loginInput:hover {
+.input:hover {
     border-bottom: 2px solid #03989E;
 }
-.loginButton {
+.button {
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -68,7 +73,7 @@
     background-color: #03989E;
     color: #f6fafb;
 }
-.loginButton:hover {
+.button:hover {
     transform: translateY(-5px);
     box-shadow : 0px 10px 50px -10px #CCCCCC;
 }
