--- a/src/styles/CommonStyles.module.css
+++ b/src/styles/CommonStyles.module.css
@@ -43,6 +43,7 @@
 .itemsContainer {
     margin-top: 20px;
     margin-bottom: 20px;
+    padding-top: 50px;
 } 
 .textEmptyResult {
     color: black;
