--- a/src/styles/Page/CategoriesPageStyles.module.css
+++ b/src/styles/Page/CategoriesPageStyles.module.css
@@ -1,5 +1,6 @@
-.resourcesContainer {
+.categoriesContainer {
     margin-top: 20px;
+    padding-top: 50px;
     margin-bottom: 20px;
     justify-content: space-around;
     display: flex;
