--- a/src/styles/CommonStyles.module.css
+++ b/src/styles/CommonStyles.module.css
@@ -1,11 +1,11 @@
 .container {
     flex: 1;
-    background-color: grey;
+    background-color: #03989E;
     align-items: center;
     justify-content: center;
 }
 .content {
-    background-color: white;
+    background-color: #f6fafb;
     width: 100%;
     position: absolute;
     top : 135px;
@@ -17,23 +17,23 @@
     position : absolute;
     left : 20px;
     padding : 10px;
-    background-color: whitesmoke;
+    background-color: #eaf0f0d5;
     border-radius: 7px;
     transition: 0.2;
 }
 .header {
     font-size: 32px;
     font-weight: 800px;
-    color: black;
+    color: #363e3e;
     text-align: center;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 .title {
-    font-size: 32px;
+    font-size: 40px;
     font-weight: 800px;
-    color: black;
+    color: #363e3e;
     text-align: center;
 }
 .loader {
@@ -42,11 +42,17 @@
 }
 .itemsContainer {
     margin-top: 20px;
-    margin-bottom: 20px;
     padding-top: 50px;
+    margin-bottom: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 } 
 .textEmptyResult {
-    color: black;
+    color: #363e3e;
     text-align: center;
     align-items: center;
     width: 100%;
@@ -60,7 +66,7 @@
 .returnBtn {
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color: #f6fafb;
     width: 40px;
     height: 40px;
     padding: 5px;
@@ -72,7 +78,7 @@
 .returnBtnInFlatList {
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color: #f6fafb;
     width: 40px;
     height: 40px;
     padding: 5px;
