--- a/src/styles/Components/Card/ResourceCardStyles.module.css
+++ b/src/styles/Components/Card/ResourceCardStyles.module.css
@@ -1,18 +1,26 @@
 .container {
-    width: 100%;
-    height: 190px;
-    background-color: whitesmoke;
+    width: 500px;
+    height: 250px;
+    background-color: #eaf0f0;
     border-radius: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0px 5px 10px -5px #363e3e;
+}
+.container:hover {
+    background-color: #cfd4d4;
+    transition: 0.2s;
 }
 .cardUser {
-    color: black;
+    color: #363e3e;
     font-weight: bold;
     font-size: 20px;
     margin-left: 20px;
 }
 .cardTitle {
-    color: black;
+    color: #363e3e;
     text-decoration-style: solid;
     text-decoration-line: underline;
     font-size: 16px;
@@ -21,7 +29,7 @@
     margin-bottom: 10px;
 }
 .cardText {
-    color: white;
+    color: #9ca6a9;
     font-size: 13px;
     text-align: justify;
     margin-top: 3px;
