--- a/src/styles/Components/Input/SearchBarStyles.module.css
+++ b/src/styles/Components/Input/SearchBarStyles.module.css
@@ -3,18 +3,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
 }
 .inputComponent {
+    background-color: #eaf0f0;
     width: 60%;
     box-sizing: border-box;
-    box-shadow: 0px 10px 50px -10px #CCCCCC;
+    box-shadow: 0px 5px 5px -5px #363e3e;
     border: none;
     border-radius: 10px;
     outline: none;
     border-bottom: 2px solid #EEEEEE;
     transition: 0.2s;
-    height: 30px;
+    height: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .inputComponent:hover {
     border-bottom: 2px solid #03989E;
