--- a/src/styles/Components/NavBarStyles.module.css
+++ b/src/styles/Components/NavBarStyles.module.css
@@ -14,11 +14,11 @@
     flex-direction: row;
     justify-content: space-around;
     border-radius: 15px;
-    background-color: white;
+    background-color: #eaf0f0;
 }
 
 .root .linkContainer .link {
-    color: black;
+    color: #363e3e;
     display: flex;
     flex-direction: column;
     align-items: center;
