--- a/src/styles/Components/Card/ResourceCardStyles.module.css
+++ b/src/styles/Components/Card/ResourceCardStyles.module.css
@@ -4,10 +4,12 @@
     background-color: #eaf0f0;
     border-radius: 20px;
     margin-bottom: 30px;
+    padding-bottom: 10px;
     cursor: pointer;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0px 5px 10px -5px #363e3e;
+    overflow: hidden;
 }
 .container:hover {
     background-color: #cfd4d4;
@@ -26,7 +28,8 @@
     font-size: 16px;
     margin-left: 20px;
     margin-right: 20px;  
-    margin-bottom: 10px;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 .cardText {
     color: #9ca6a9;
@@ -76,6 +79,6 @@
     display: flex;
     flex-direction: row;
     overflow: scroll;
-    margin-top: 20px;
-    margin-bottom: 20px;  
+    margin-left: 20px;
+    margin-right: 20px;  
 }
