--- a/src/styles/Components/NavBarStyles.module.css
+++ b/src/styles/Components/NavBarStyles.module.css
@@ -6,6 +6,23 @@
     
 }
 
+.root .disconnectContainer {
+    justify-content: center;
+    align-items: center;
+    background-color: #eaf0f0;
+    border-radius: 5px;
+    padding: 10px;
+    position: absolute;
+    right: 6%;
+    top: 6%;
+    display: flex;
+    flex-direction: row;
+}
+
+.root .disconnectContainer:hover {
+    background-color: #cfd4d4;
+}
+
 .root .linkContainer {
     width: 50%;
     padding: 10px;
