--- a/src/styles/Page/LoginPageStyles.module.css
+++ b/src/styles/Page/LoginPageStyles.module.css
@@ -13,17 +13,18 @@
 .form {
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: #f6fafb;
+    background-color: #eaf0f0;
     padding: 30px;
     margin: 30px;
     border-radius: 15px;
     width: 100%;
-    height: 500px;
-    box-shadow: 0px 10px 50px -10px #CCCCCC;
+    box-shadow: 0px 5px 10px -5px #363e3e;
 }
 .header {
     text-align: center;
     font-weight: bold;
+    color: #363e3e;
+    font-size: 32px;
 }
 .container {
     margin-top: 20px;
@@ -45,14 +46,17 @@
     color: #808080;
 }
 .input {
+    padding-left: 20px;
+    padding-right: 20x;
     width: 100%;
     box-sizing: border-box;
-    box-shadow: 0px 10px 50px -10px #CCCCCC;
+    box-shadow: 0px 5px 10px -5px #363e3e;
     border: none;
     outline: none;
     border-bottom: 2px solid #EEEEEE;
     transition: 0.2s;
-    height: 30px;
+    height: 40px;
+    border-radius: 15px;
 }
 .input:hover {
     border-bottom: 2px solid #03989E;
@@ -65,10 +69,11 @@
     margin-bottom: 5px;
     padding: 5px;
     width: 20%;
+    height: 50px;
     transition: 0.2s;
     cursor: pointer;
     outline: none;
-    border-radius: 5px;
+    border-radius: 15px;
     border: none;
     background-color: #03989E;
     color: #f6fafb;
