--- a/src/styles/Components/Card/CategoryCardStyles.module.css
+++ b/src/styles/Components/Card/CategoryCardStyles.module.css
@@ -6,7 +6,7 @@
     align-self: flex-end;
     padding-right: 20px;
     width: 300px;
-    height: 300px;
+    /* height: 300px; */
     display: flex;
     cursor: pointer;
     flex-direction: column;
