--- a/src/styles/Page/ProfilePageStyles.module.css
+++ b/src/styles/Page/ProfilePageStyles.module.css
@@ -3,6 +3,7 @@
     padding: 10px;
 }
 .profileTitle {
+    color: #363e3e;
     font-size: 32px;
     font-weight: 800px;
     text-align: center;
@@ -10,6 +11,7 @@
     margin-bottom: 10px;
 }
 .profileSubTitle {
+    color: #363e3e;
     font-size: 16px;
     font-weight: 300px;
     text-align: center;
@@ -17,9 +19,16 @@
     margin-bottom: 10px;
 }
 .profileDescription {
-    color: black;
+    color: #363e3e;
     font-size: 12px;
     width: 100%;
     margin: 10px;
     justify-content: center;
+}
+.container {
+    margin-top: 20px;
+    padding-top: 50px;
+    margin-bottom: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
 }
