--- a/src/styles/Components/Card/ResourceCardStyles.module.css
+++ b/src/styles/Components/Card/ResourceCardStyles.module.css
@@ -1,12 +1,11 @@
 .container {
+    display: grid;
     width: 500px;
     height: 250px;
     background-color: #eaf0f0;
     border-radius: 20px;
     margin-bottom: 30px;
-    padding-bottom: 10px;
     cursor: pointer;
-    flex-direction: column;
     justify-content: space-between;
     box-shadow: 0px 5px 10px -5px #363e3e;
     overflow: hidden;
@@ -16,12 +15,15 @@
     transition: 0.2s;
 }
 .cardUser {
+    height: 15px;
     color: #363e3e;
     font-weight: bold;
     font-size: 20px;
     margin-left: 20px;
+    margin-top: 0px;
 }
 .cardTitle {
+    height: 30px;
     color: #363e3e;
     text-decoration-style: solid;
     text-decoration-line: underline;
@@ -34,20 +36,25 @@
 .cardText {
     color: #9ca6a9;
     font-size: 13px;
+    height: 25px;
     text-align: justify;
     margin-top: 3px;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
     margin-left: 20px;
     margin-right: 20px;
+    overflow: hidden;
 }
 .lineButtonsAndUser {
-    margin-top: 10px;
+    height: 50px;
+    margin-top: 20px;
     align-items: center;
     justify-content: space-between;
     display: flex;
     flex-direction : row;
 }
 .userAndButtonsContainer {
+    height: 100px;
+    margin-top: 20px;
     align-items: flex-end;
     margin-right: 20px;
 }
