--- a/src/styles/Page/ResourceDetailsPageStyles.module.css
+++ b/src/styles/Page/ResourceDetailsPageStyles.module.css
@@ -1,27 +1,35 @@
 .centerContent {
+    display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px;
+    height: 100%;
+    margin-top: 3%;
 }
 .resourceAttachmentContainer {
     width: 276px;
     height: 55px;
-    background-color: whitesmoke;
+    background-color: #eaf0f0;
     border-bottom: 2px;
     border-color: grey;
     border-radius: 15px;
 }
-.resourceContainer {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    justify-content: center;
+.cardContainer {
+    width: 98%;
+    height: 98%;
+    background-color: #eaf0f0;
+    border-radius: 20px;
+    overflow: scroll;
 }
-.cardBackground {
-    width: 100%;
-    height: auto;
-    background-color: whitesmoke;
+.resourceContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 550px;
+    background-color: #eaf0f0;
     border-radius: 20px;
     margin-bottom: 20px;
+    box-shadow: 0px 5px 10px -5px #363e3e;
 }
 .cardUser {
     font-weight: bold;
