--- a/src/styles/Page/ResourceDetailsPageStyles.module.css
+++ b/src/styles/Page/ResourceDetailsPageStyles.module.css
@@ -1,7 +1,6 @@
 .centerContent {
     display: flex;
     justify-content: center;
-    align-items: center;
     height: 100%;
     margin-top: 3%;
 }
@@ -31,26 +30,6 @@
     margin-bottom: 20px;
     box-shadow: 0px 5px 10px -5px #363e3e;
 }
-.cardUser {
-    font-weight: bold;
-    font-size: 20px;
-    margin-left: 20px;
-}
-.cardTitle {
-    text-decoration: solid;
-    text-decoration-line: underline;
-    font-size: 16px;
-    margin-left: 20px;
-}
-.cardText {
-    color: white;
-    font-Size: 13px;
-    text-align: justify;
-    margin-top: 5px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-}
 .lineLikeAndUser {
     margin-top: 10px;
     align-items: center;
@@ -58,29 +37,18 @@
     display:flex;
     flex-direction: row;
 }
-.likeBtn {
-    margin-right: 20px;
-}
-.commentContainer {
+.commentsContainer {
     justify-content: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    width: 25%;
+    margin-top: 0;
+    margin-left: 5%;
 }
 .commentTitle {
+    color: #363e3e;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 25px;
+    margin-bottom: 10px;
     text-decoration-line: underline;
-}
-.noComment {
-    position: absolute;
-    left: 20px;
-}
-.categoriesContainer {
-    display: flex;
-    flex-direction: row;
-    overflow: scroll;
-    margin-top: 20px;
-    margin-bottom: 20px;  
 }
 .btnFile {
     margin-bottom: 30px;
