--- a/src/styles/Components/Card/CommentCardStyles.module.css
+++ b/src/styles/Components/Card/CommentCardStyles.module.css
@@ -24,10 +24,15 @@
     font-size: 20px;
 }
 .cardComment {
-    height: auto;
+    width: 100%;
+    background-color: #eaf0f0;
     color: #9ca6a9;
-    text-align: justify;
-    margin-top: 10px;
+    border: none;
+    height: auto;
+    resize: vertical;
+    box-sizing: border-box;
+    word-wrap: break-word;
+    outline: none;
 }
 .deleteCommentButton {
     margin-left: auto; 
