--- a/src/styles/Components/Input/InputTextCommentStyles.module.css
+++ b/src/styles/Components/Input/InputTextCommentStyles.module.css
@@ -23,6 +23,7 @@
     padding-right: 20px;
 }
 .sendButtonInput {
+    cursor: pointer;
     justify-content: center;
     align-items: center;
     padding: 5px;
