Add cursor pointer and underline animation

--- a/src/styles/Components/Button/CategoryButtonStyles.module.css
+++ b/src/styles/Components/Button/CategoryButtonStyles.module.css
@@ -10,6 +10,7 @@
     padding-top: 2px; 
     border-radius : 15px;
     text-align : 'center';
+    cursor: pointer;
 }
 .btnText:hover {
     background-color: #aab3b3;
