--- a/src/styles/Components/Button/LikeButtonStyles.module.css
+++ b/src/styles/Components/Button/LikeButtonStyles.module.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     display: flex;
     flex-direction: row;
+    cursor: pointer;
 }
 .numberLike {
     color: #363e3e;
