--- a/src/styles/Components/Card/ResourceCardStyles.module.css
+++ b/src/styles/Components/Card/ResourceCardStyles.module.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
     width: 500px;
-    height: 250px;
+    height: 350px;
     background-color: #eaf0f0;
     border-radius: 20px;
     margin-bottom: 30px;
@@ -43,6 +43,7 @@
     margin-left: 20px;
     margin-right: 20px;
     overflow: hidden;
+    width: 460px;
 }
 .cardTextAuto {
     color: #9ca6a9;
