--- a/src/styles/Page/CreateResourcePageStyles.module.css
+++ b/src/styles/Page/CreateResourcePageStyles.module.css
@@ -5,10 +5,13 @@
     padding-left: 10px;
     padding-right: 10px;
     margin-top: 5px;
+    display: flex;
+    flex-direction: column;
 }
 .addNameResource {
-    color: black;
-    background-color: whitesmoke;
+    color: #363e3e;
+    background-color: #eaf0f0;
+    border: 1px solid #eaf0f0;
     text-align: center;
     height: 40px;
     width: 90%;
@@ -16,11 +19,18 @@
     padding-bottom: 10px;
     border-radius: 10px;
 }
+.addNameResource:hover {
+    border: 1px solid #363e3e;
+}
+.addNameResource:focus {
+    border: 1px solid #363e3e;
+}
 .sendButton {
     width: 140px;
     height: 45px;
     justify-content: center;
-    background-color: grey;
+    background-color: #03989E;
+    color: #f7fbfc;
     margin-top: 20px;
     border-radius: 15px;
     transition: 0.2;
