--- a/src/styles/CommonStyles.module.css
+++ b/src/styles/CommonStyles.module.css
@@ -47,7 +47,7 @@
     margin-bottom: 20px;
     margin-right: 30px;
     margin-left: 30px;
-    justify-content: space-between;
+    justify-content: space-evenly;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
