--- a/src/styles/CommonStyles.module.css
+++ b/src/styles/CommonStyles.module.css
@@ -101,6 +101,7 @@
     outline: none;
     text-decoration: none;
     color: #f7fbfc;
+    margin-right: 30px;
     margin-top: 30px;
 }
 .button:hover {
