--- a/src/styles/CommonStyles.module.css
+++ b/src/styles/CommonStyles.module.css
@@ -52,6 +52,15 @@
     flex-direction: row;
     flex-wrap: wrap;
 } 
+.itemsContainer2 {
+    margin-bottom: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+} 
 .textEmptyResult {
     color: #363e3e;
     text-align: center;
@@ -105,6 +114,34 @@
     margin-top: 30px;
 }
 .button:hover {
+    transform: translateY(-5px);
+    box-shadow : 0px 10px 50px -10px #CCCCCC;
+}
+.buttonContainer {
+    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.buttonEdit {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    width: 20%;
+    transition: 0.2s;
+    cursor: pointer;
+    border-radius: 15px;
+    border: none;
+    background-color: #03989E;
+    outline: none;
+    text-decoration: none;
+    color: #f7fbfc;
+    margin-top: 30px;
+}
+.buttonEdit:hover {
     transform: translateY(-5px);
     box-shadow : 0px 10px 50px -10px #CCCCCC;
 }
