--- a/src/styles/Page/ProfilePageStyles.module.css
+++ b/src/styles/Page/ProfilePageStyles.module.css
@@ -1,6 +1,9 @@
 .profileContainer {
     align-items: center;
     padding: 10px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
 .profileTitle {
     color: #363e3e;
