--- a/src/styles/CommonStyles.module.css
+++ b/src/styles/CommonStyles.module.css
@@ -7,7 +7,8 @@
 }
 .content {
     background-color: #f6fafb;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     min-height: 100vh;
     margin-top: 0px;
@@ -36,6 +37,7 @@
     font-weight: 800px;
     color: #363e3e;
     text-align: center;
+    max-height: 60px;
 }
 .loader {
     display: flex;
@@ -152,4 +154,10 @@
     align-items: center;
     justify-content: center;
     margin-top: 20px;
+}
+.horizontalContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
