--- a/src/styles/Page/Admin/AdminUserPageStyles.module.css
+++ b/src/styles/Page/Admin/AdminUserPageStyles.module.css
@@ -2,5 +2,7 @@
     cursor: pointer;
 }
 .editIcon {
-    padding-top: 30px;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
