--- a/src/styles/CommonStyles.module.css
+++ b/src/styles/CommonStyles.module.css
@@ -129,6 +129,13 @@
     display: flex;
     flex-direction: row;
 }
+.buttonDiv {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
 .buttonEdit {
     text-align: center;
     justify-content: center;
