--- a/src/styles/Components/Button/ButtonFileStyles.module.css
+++ b/src/styles/Components/Button/ButtonFileStyles.module.css
@@ -1,4 +1,5 @@
 .container {
+    box-shadow: 0px 5px 10px -5px #363e3e;
     background-color: #eaf0f0;
     width: 100%;
     display : flex;
@@ -16,6 +17,7 @@
     transition: 0.2s;
 }
 .buttonFileContainer {
+    box-shadow: 0px 5px 10px -5px #363e3e;
     background-color: #eaf0f0;
     width: 70%;
     display: flex;
