--- a/src/styles/Components/Input/InputTextDescriptionStyles.module.css
+++ b/src/styles/Components/Input/InputTextDescriptionStyles.module.css
@@ -1,4 +1,5 @@
 .container {
+    box-shadow: 0px 5px 10px -5px #363e3e;
     color: #363e3e;
     background-color: #eaf0f0;
     overflow: scroll;
@@ -12,10 +13,4 @@
     overflow: auto;
     border: none;
     border: 1px solid #eaf0f0;
-}
-.container:hover {
-    border: 1px solid #363e3e;
-}
-.container:focus {
-    border: 1px solid #363e3e;
 }
