--- a/src/styles/Page/Admin/Category/AdminCategoriesPageStyles.module.css
+++ b/src/styles/Page/Admin/Category/AdminCategoriesPageStyles.module.css
@@ -23,7 +23,7 @@
 }
 .button:hover {
     transform: translateY(-5px);
-    box-shadow : 0px 10px 50px -10px #CCCCCC;
+    box-shadow: 0px 5px 10px -5px #363e3e;
 }
 .buttonContainer {
     margin-top: 20px;
