--- a/src/styles/Page/Admin/Category/AdminCategoryPageStyles.module.css
+++ b/src/styles/Page/Admin/Category/AdminCategoryPageStyles.module.css
@@ -34,13 +34,20 @@
     box-shadow: 0px 5px 10px -5px #363e3e;
     color: #363e3e;
     background-color: #eaf0f0;
-    border: 1px solid #eaf0f0;
+    border: 2px solid #eaf0f0;
+    outline-style: none;
     text-align: center;
     height: 40px;
     width: 70%;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 10px;
+}
+.setNameCategory:hover {
+    border: 2px solid #03989E;
+}
+.setNameCategory:focus {
+    border: 2px solid #03989E;
 }
 .switchContainer {
     color: #363e3e;
