--- a/src/styles/Page/EditResourcePageStyles.module.css
+++ b/src/styles/Page/EditResourcePageStyles.module.css
@@ -12,7 +12,8 @@
     box-shadow: 0px 5px 10px -5px #363e3e;
     color: #363e3e;
     background-color: #eaf0f0;
-    border: 1px solid #eaf0f0;
+    border: 2px solid #eaf0f0;
+    outline-style: none;
     text-align: center;
     height: 40px;
     width: 90%;
@@ -20,11 +21,19 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.addNameResource:hover {
+    border: 2px solid #03989E;
+}
+.addNameResource:focus {
+    border: 2px solid #03989E;
+}
 .sendButton {
     box-shadow: 0px 5px 10px -5px #363e3e;
     margin-top: 20px;
     margin-left: 15px;
     padding: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
     transition: 0.2s;
     cursor: pointer;
     border-radius: 15px;
@@ -36,7 +45,7 @@
 }
 .sendButton:hover {
     transform: translateY(-5px);
-    box-shadow : 0px 10px 50px -10px #CCCCCC;
+    box-shadow: 0px 5px 10px -5px #363e3e;
 }
 .categorieList {
     margin-right: 10px;
