--- a/src/styles/Page/ShareResourcePageStyles.module.css
+++ b/src/styles/Page/ShareResourcePageStyles.module.css
@@ -39,5 +39,5 @@
 }
 .button:hover {
     transform: translateY(-5px);
-    box-shadow : 0px 10px 50px -10px #CCCCCC;
+    box-shadow: 0px 5px 10px -5px #363e3e;
 }
