--- a/src/styles/Components/Button/ButtonFileStyles.module.css
+++ b/src/styles/Components/Button/ButtonFileStyles.module.css
@@ -2,6 +2,7 @@
     box-shadow: 0px 5px 10px -5px #363e3e;
     background-color: #eaf0f0;
     width: 100%;
+    height: 30px;
     display : flex;
     flex-direction : row;
     margin-top: 30px;
@@ -19,7 +20,7 @@
 .buttonFileContainer {
     box-shadow: 0px 5px 10px -5px #363e3e;
     background-color: #eaf0f0;
-    width: 70%;
+    width: 100%;
     display: flex;
     flex-direction : row;
     margin-top: 30px;
