--- a/src/styles/Components/Card/CategoryCardStyles.module.css
+++ b/src/styles/Components/Card/CategoryCardStyles.module.css
@@ -5,8 +5,8 @@
     margin-bottom: 20px;
     align-self: flex-end;
     padding-right: 20px;
-    width: 300px;
-    /* height: 300px; */
+    width: 250px;
+    height: 150px; 
     display: flex;
     cursor: pointer;
     flex-direction: column;
@@ -43,7 +43,8 @@
     border-radius: 20px;
     margin-bottom: 20px;
     padding-right: 20px;
-    width: 300px;
+    width: 250px;
+    height: 150px; 
     display: flex;
     cursor: pointer;
     flex-direction: column;
