--- a/src/styles/Components/Modal/ErrorModalStyles.module.css
+++ b/src/styles/Components/Modal/ErrorModalStyles.module.css
@@ -1,17 +1,17 @@
 .container {
+    box-shadow: 0px 5px 5px -5px #363e3e;
     background-color: #eaf0f0;
     border-radius: 15px;
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
     width: 400px;
     height: 50px;
-    animation: 0.4s ease-out fadeIn 1;
-    
+    animation: 0.4s ease-in-out fadeIn 1;
 }
 @keyframes fadeIn {
     0% {
@@ -22,16 +22,17 @@
       opacity: 1;
       visibility: visible;
     }
-  }
+}
 .message {
     color: #9ca6a9;
     font-size: 13px;
     height: 25px;
-    text-align: justify;
+    text-align: center;
     align-items: center;
     justify-content: center;
 }
 .button {
+    color: #363e3e;
     background-color: #eaf0f0;
     padding: 10px;
     justify-content: center;
