--- a/src/styles/Page/ProfilePageStyles.module.css
+++ b/src/styles/Page/ProfilePageStyles.module.css
@@ -33,3 +33,30 @@
     margin-right: 30px;
     margin-left: 30px;
 }
+.itemsContainer {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    margin-top: 3%;
+} 
+.statContainer {
+    height: 500px;
+    background-color: #eaf0f0;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0px 5px 10px -5px #363e3e;
+}
+.resourcesContainer {
+    margin-top: 0px;
+    margin-left: 100px;
+    height: 100%;
+}
+.title {
+    width: 100%;
+    font-size: 40px;
+    font-weight: bold;
+    font-weight: 800px;
+    color: #363e3e;
+    text-align: left;
+    margin-bottom: 20px;
+}
