--- a/src/styles/Components/Card/ResourceCardStyles.module.css
+++ b/src/styles/Components/Card/ResourceCardStyles.module.css
@@ -1,5 +1,4 @@
 .container {
-    display: grid;
     width: 500px;
     height: 250px;
     background-color: #eaf0f0;
@@ -32,10 +31,9 @@
 .cardText {
     color: #9ca6a9;
     font-size: 15px;
-    height: 50px;
+    height: 60px;
     text-align: justify;
-    margin-top: 3px;
-    padding-bottom: 10px;
+    margin-top: 0px;
     margin-left: 20px;
     margin-right: 20px;
     overflow: hidden;
@@ -71,7 +69,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 .buttonsEditContainer {
     position: absolute;
@@ -85,12 +83,15 @@
     right: 0px;
 }
 .withoutUserContainer {
-    height: 100%;
-    margin-top: 20px;
     width: 500px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
+    height: 250px;
+    background-color: #eaf0f0;
+    border-radius: 20px;
+    
+    margin-top: 25px;
+    justify-content: space-between;
+    box-shadow: 0px 5px 10px -5px #363e3e;
+    overflow: hidden;
 }
 .categoriesContainer {
     display: flex;
