--- a/src/styles/Page/ProfilePageStyles.module.css
+++ b/src/styles/Page/ProfilePageStyles.module.css
@@ -59,11 +59,8 @@
     color: #363e3e;
     text-align: left;
     margin-bottom: 20px;
-}
-.followersContainer {
     margin-top: 40px;
-    height: 100%;
 }
 .wrapperContainer {
-    column-count: 2;
+    display: flex;
 }
